Fix margin on paragraphs - we don't want margin on mobile

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -112,7 +112,7 @@ pre code {
 }
 
 .content p {
-    margin-left: 2em;
+    @apply md:ml-6;
 }
 
 td {
